--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 
 python:
     - "3.6"
-
+    - "pypy3"
+install:
+    - pip install .
 script:
-    - "python setup.py test"
+    - pytest
