--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 
 python:
     - "3.6"
-    - "pypy3"
 install:
     - pip install .
 script:
-    - pytest
+    - python setup.py test
