--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
     - "3.6"
 install:
-    - pip install pyCommonTools
+    - pip install pyCommonTools>=1.1
     - pip install .
 script:
     - pytest
